--- a/css/space.css.sass
+++ b/css/space.css.sass
@@ -24,16 +24,23 @@
 
 $blue: #0000FF
 $green: #00D2A3
+
+html
+  overflow-x: hidden
+  overflow: hidden
+  overflow-y: scroll
 body
   height: 100%
   background: url("../images/squiggles.png")
   background-size: 100%
+
 
 a:hover
   text-decoration: none
 .top
   display: flex
   align-items: center
+  overflow-x: hidden
   height: 80vh
   width: 100%
   img
@@ -79,10 +86,6 @@ a:hover
           letter-spacing: 2px
 
 @media (max-width: 800px)
-  body
-    overflow-x: hidden
-  .top
-    margin-left: 20px
 
   .bottom
     margin-top: 0px
